--- a/views/include/_navbar.ejs
+++ b/views/include/_navbar.ejs
@@ -32,7 +32,7 @@
     <nav class="navbar">
         <a href="#home">home</a>
         <a href="#features">Signup</a>
-        <a href="#about">Login</a>
+        <a href="/login">Login</a>
         <a href="#review">About</a>
         <a href="#contact">contact</a>
     </nav>
