--- a/views/include/_navbar.ejs
+++ b/views/include/_navbar.ejs
@@ -30,8 +30,8 @@
     <label for="menu-bar" class="fas fa-bars"></label>
 
     <nav class="navbar">
-        <a href="#home">home</a>
-        <a href="#features">Signup</a>
+        <a href="/">Home</a>
+        <a href="/signup">Signup</a>
         <a href="/login">Login</a>
         <a href="#review">About</a>
         <a href="#contact">contact</a>
