--- a/views/include/patientDashboardNavbar.ejs
+++ b/views/include/patientDashboardNavbar.ejs
@@ -43,7 +43,7 @@
           </div>
         <!--<a href="/searchGenre" class="dropdown" onclick="myFunction()"> Find Doctors</a> -->
         <a href="#review">My Medical History</a>
-        <a href="#contact">My Profile</a>
+        <a href="/P_profile">My Profile</a>
         <a href="/logout">Logout</a>
     </nav>
 
