--- a/views/include/docDashboardNavbar.ejs
+++ b/views/include/docDashboardNavbar.ejs
@@ -43,7 +43,7 @@
           </div>
         <!--<a href="/searchGenre" class="dropdown" onclick="myFunction()"> Find Doctors</a> -->
         <a href="#review"> Patient History</a>
-        <a href="#contact">My Profile</a>
+        <a href="/D_profile">My Profile</a>
         <a href="/logout">Logout</a>
     </nav>
 
