--- a/views/include/docDashboardNavbar.ejs
+++ b/views/include/docDashboardNavbar.ejs
@@ -43,8 +43,8 @@
           </div>
         <!--<a href="/searchGenre" class="dropdown" onclick="myFunction()"> Find Doctors</a> -->
         <a href="#review"> Patient History</a>
-        <a href="/D_profile">My Profile</a>
-        <a href="/logout">Logout</a>
+        <a href="/D_dashboard/profile">My Profile</a>
+        <a href="/D_dashboard/logout">Logout</a>
     </nav>
 
     <style>
