--- a/views/include/patientDashboardNavbar.ejs
+++ b/views/include/patientDashboardNavbar.ejs
@@ -43,8 +43,8 @@
           </div>
         <!--<a href="/searchGenre" class="dropdown" onclick="myFunction()"> Find Doctors</a> -->
         <a href="#review">My Medical History</a>
-        <a href="/P_profile">My Profile</a>
-        <a href="/logout">Logout</a>
+        <a href="P_dashboard/profile">My Profile</a>
+        <a href="P_dashboard/logout">Logout</a>
     </nav>
 
     <style>
