--- a/views/patients/P_profile.ejs
+++ b/views/patients/P_profile.ejs
@@ -94,7 +94,7 @@
 </div>
 
 <div>
-    <a class="backbtn" href="/backto_Pdash">Back to Dashboard</a> </div>
+    <a class="backbtn" href="/P_dashboard/backto_dash">Back to Dashboard</a> </div>
 
     </div>
 </body>
