--- a/views/doctors/D_profile.ejs
+++ b/views/doctors/D_profile.ejs
@@ -113,7 +113,7 @@
 </div>
 </div>
 <div>
-<a class="backbtn" href="/backto_Ddash">Back to Dashboard</a> </div>
+<a class="backbtn" href="/D_dashboard/backto_dash">Back to Dashboard</a> </div>
     </div>
 </body>
 </html>
