--- a/views/doctors/scheduleAppointment.ejs
+++ b/views/doctors/scheduleAppointment.ejs
@@ -43,7 +43,7 @@ console.log(today);
 <!--include navbar-->
 <%- include('../include/docDashboardNavbar') %>
 
-<div class="container" style="margin-top: 45px; margin-left: 300px;">
+<div class="container" style="margin-top: 40px; margin-left: 300px;">
 
   <div class="row mt-1">
     <div class="col-md-13 m-auto">
@@ -90,6 +90,14 @@ console.log(today);
               value="<%= typeof end_time != 'undefined' ? end_time : '' %>"
               required
             />
+          </div>
+          <div class="form-group">
+            <label for="mode" style="font-size: medium;">Mode</label>
+            <select id="mode" name="mode" class="form-control form-control-lg">
+            <option value="Online">Online</option>
+            <option value="Offline">Offline</option>
+            <option value="Online/Offline">Both</option>
+            </select>
           </div>
           <div class="form-group">
             <label for="average_time" style="font-size: medium;">Average Consulting Time</label>
