--- a/views/include/patientDashboardNavbar.ejs
+++ b/views/include/patientDashboardNavbar.ejs
@@ -42,6 +42,7 @@
             </div>
           </div>
         <!--<a href="/searchGenre" class="dropdown" onclick="myFunction()"> Find Doctors</a> -->
+        <a href="P_dashboard/book_appoint">Book Appointments</a>
         <a href="#review">My Medical History</a>
         <a href="P_dashboard/profile">My Profile</a>
         <a href="P_dashboard/logout">Logout</a>
