confirm appoint-updates

--- a/views/patients/book_appoint.ejs
+++ b/views/patients/book_appoint.ejs
@@ -34,7 +34,7 @@
                 <th scope="row"><%= result.DoctorData[0].firstname %></th>
                 <td><%= result.DoctorData[0].degree %></td>
                 <td><%= result.DoctorData[0].speciality %></td>
-                <td><%= result.email %></td>
+                <td><%= result.email %></std>
                 <td><%= result.date %></td>
                 <td><%=result.mode %></td>
                 <td><%= result.start_time %></td>
@@ -42,7 +42,7 @@
                 <td><%= result.average_time %></td>
                 <td><button type="button" class="btn btn-success btn-sm"
                    
-                   onclick="window.location.href = '/P_dashboard/book_appoint/lock_appoint'"
+                   onclick="window.location.href = '/P_dashboard/lock_appoint'"
                   >Book</button></td>
                
             </tr>
