--- a/views/patients/lockAppoint.ejs
+++ b/views/patients/lockAppoint.ejs
@@ -236,7 +236,7 @@
           </div>
        
           <div class="item">
-            <label for="symptoms">Symptoms<span>*</span></label>
+            <label for="symptom">Symptoms<span>*</span></label>
             <input id="symptom" type="text"   name="symptom" placeholder="Specify your symptoms" required/>
           </div>
           <div class="item">
@@ -246,6 +246,30 @@
           <div class="item">
             <label for="weight">Weight<span>*</span></label>
             <input id="weight" type="text"   name="weight" placeholder=" (in kg)" required/>
+          </div>
+          <div class="item">
+            <label for="d_fname">Doctor's FirstName<span>*</span></label>
+            <input id="d_fname" type="text"   name="d_fname" required/>
+          </div>
+          <div class="item">
+            <label for="d_lname">Doctor's LastName<span>*</span></label>
+            <input id="d_lname" type="text"   name="d_lname"  required/>
+          </div>
+          <div class="item">
+            <label for="date">Date of Consultation<span>*</span></label>
+            <input id="date" type="text"   name="date"  required/>
+          </div>
+          <div class="item">
+            <label for="stime">Start Time<span>*</span></label>
+            <input id="stime" type="text"   name="stime"  required/>
+          </div>
+          <div class="item">
+            <label for="etime">End Time<span>*</span></label>
+            <input id="etime" type="text"   name="etime"  required/>
+          </div>
+          <div class="item">
+            <label for="mode">Mode of Consultation<span>*</span></label>
+            <input id="mode" type="text"   name="mode"  required/>
           </div>
         
           
