--- a/views/patients/book_appoint.ejs
+++ b/views/patients/book_appoint.ejs
@@ -42,7 +42,7 @@
                 <td><%= result.average_time %></td>
                 <td><button type="button" class="btn btn-success btn-sm"
                    
-                   onclick="window.location.href = '/P_dashboard/lock_appoint'"
+                   onclick="window.location.href = '/P_dashboard/lock_appoint?scheduleId=<%= result._id %>'"
                   >Book</button></td>
                
             </tr>
