--- a/views/include/docDashboardNavbar.ejs
+++ b/views/include/docDashboardNavbar.ejs
@@ -34,10 +34,10 @@
         <div class="dropdown">
             <a href="#" onclick="myFunction()" class="dropbtn">Appointments</a>
             <div id="myDropdown" class="dropdown-content">
-              <a href="/D_dashboard/scheduleAppointment">Allot Appointments</a>
-              <a href="#">Reschedule Appointments</a>
-              <a href="#">Cancel Appointments</a>
-              <a href="#">View Appointments</a>
+              <a href="/D_dashboard/scheduleAppointment">Schedule Appointments</a>
+             <!-- <a href="#">Reschedule Appointments</a>
+              <a href="#">Cancel Appointments</a> -->
+              <a href="/D_dashboard/viewAppointments">View Appointments</a>
               
             </div>
           </div>
