--- a/Assets/css/login.css
+++ b/Assets/css/login.css
@@ -70,10 +70,11 @@ a:hover{
     box-shadow: 0px 0px 26px -6px rgba(0,0,0,0.10);
 }
 .login-content .input-div{
+    font-size: 12px;
     position: relative;
     display: grid;
     grid-template-columns: 7% 93%;
-    margin: 5px;
+    margin: 10px;
     padding: 5px 0;
     border-bottom: 2px solid #d9d9d9;
 }
