--- a/views/patients/dashboardPatient.ejs
+++ b/views/patients/dashboardPatient.ejs
@@ -32,7 +32,11 @@
     <div class="img">
         <img src="../Static/images/patient.gif" alt="BG">
     </div>
-
+    <div class="login-content">
+        <div class="login-inner-content">
+            <a class="btn" href="/P_dashboard/joinCall" target="_blank" style="font-size: 20px;">Join a call</a>
+            </div>
+    </div>
     
 </div>
 
