--- a/views/include/patientDashboardNavbar.ejs
+++ b/views/include/patientDashboardNavbar.ejs
@@ -42,8 +42,9 @@
             </div>
           </div>
         <!--<a href="/searchGenre" class="dropdown" onclick="myFunction()"> Find Doctors</a> -->
+        <a href="/P_dashboard/p_viewAppointments">View My Appointments</a>
         <a href="P_dashboard/book_appoint">Book Appointments</a>
-        <a href="#review">My Medical History</a>
+        <a href="P_dashboard/uploadFile">Upload Medical Reports</a>
         <a href="P_dashboard/profile">My Profile</a>
         <a href="P_dashboard/logout">Logout</a>
     </nav>
