--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,9 @@
 <!--include navbar-->
 <%- include('include/_navbar') %>
 
+<%- include ('partials/messages') %>
+
+
 <section class="home" id="home">
 
     <div class="content">
