--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -35,6 +35,8 @@
 
     <div class="signup-content">
 
+        <%- include ('partials/messages') %>
+
             <div class="title-container">
                 <h1>Sign Up</h1>
                 <h2>Welcome to MediCare</h2>
