audio video consultation

--- a/views/Dlogin.ejs
+++ b/views/Dlogin.ejs
@@ -52,7 +52,6 @@
                         <i class="far fa-user-circle"></i>
                     </div>
                     <div class="div">
-                        
                         <input type="text" class="input" name="email" placeholder="Email">
                     </div>
                 </div>
@@ -61,8 +60,8 @@
                     <div class="i">
                         <i class="fas fa-eye" onclick="show()"></i>
                     </div>
-                    <div class="div">
-                        <input type="password" name="password" class="input" placeholder="Password">
+                    <div class="div" >
+                        <input id="pswrd" type="password" name="password" class="input" placeholder="Password">
                     </div>
                 </div>
 
@@ -80,7 +79,7 @@
 
 <!--include footer-->
 <%- include('include/_footer') %>
-<script src="../Assets/js/login.js"></script>
+<script src="/js/login.js"></script>
 </body>
 
 </html>
