--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -640,3 +640,217 @@ header label{
     }
 
 }
+
+/* meet-ROOM-TOP */
+#link {
+    margin-top: 3px;
+  }
+  
+  .meet-card {
+    height: 32px;
+    padding: 3px 20px 3px 20px;
+  }
+  
+  /* meet-ROOM-VIDEOS */
+  #media {
+    height: 100vh;
+    display: flex;
+    margin-top: 70px;
+  }
+  
+  #video-grid {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .media-left {
+    flex: 0.97;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  
+  .videos {
+    margin-right: 10px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .main-video {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    flex: 0.4;
+    border-radius: 5px;
+    object-fit: cover;
+    width: 450px;
+    height: 600px;
+    border-style: solid;
+    border-width: thin;
+  
+    border-color: #C8C8C8;
+  }
+  
+  .display-video {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    flex: 0.4;
+    border-radius: 5px;
+    object-fit: cover;
+    width: 1140px;
+    height: 700px;
+    margin: 10px 20px;
+    border-style: solid;
+    border-width: thin;
+    border-color: #C8C8C8;
+  }
+  
+  .overlay {
+    position: relative;
+    /* bottom: 350px; */
+    height: 0px;
+    width: 450px;
+    text-align: center;
+      font-family: 'Handlee';
+  
+      word-wrap: break-word;
+    color: #fff;
+  }
+  
+  .hide {
+    display: none;
+  }
+  
+  .main-video:hover+.hide {
+    display: block;
+    /* color: red; */
+    text-align: center;
+  }
+  
+  /* meet-ROOM-FUNCTIONS */
+  .media-right {
+    flex: 0.03;
+    display: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  
+  }
+  #chat{
+    padding-top: 60px;
+    width: 0px;
+    display: none;
+    flex-direction: column;
+    overflow-x: hidden;
+    transition: 0.5s;
+  
+  }
+  #link-bar{
+    float: left;
+    display: none;
+    flex-direction: column;
+    overflow-x: hidden;
+    transition: 0.5s;
+  
+  }
+  #participants{
+    width: 0px;
+    display:none;
+    padding-top: 60px;
+    flex-direction: column;
+    overflow-x: hidden;
+    transition: 0.5s;
+  }
+  .raise {
+    border-style: solid;
+    border-radius: 5px;
+    border-color: red;
+  }
+  
+  .controls {
+    display: flex;
+    margin-top: 4px;
+    /* justify-content: space-between; */
+    justify-content: space-around;
+    padding: 5px;
+    align-items: center;
+  }
+  
+  
+  .controls-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 3px;
+    margin: 10px 2px;
+    min-width: 45px;
+    cursor: pointer;
+    border-radius: 5px;
+    border-style: none;
+    border-width: thin;
+    /* border-color: #fff; */
+    background-color: #000;
+    color:#fff;
+  
+  }
+  .controls-button:hover{
+    border-style: solid;
+    border-width: thin;
+    /* border-color: #fff; */
+  }
+  
+  .header {
+    padding-top: 5px;
+    text-align: center;
+  }
+  
+  .all-notification {
+    flex-grow: 1;
+    overflow-y: auto;
+  }
+  
+  .notifications {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .message {
+    border-radius: 5px;
+    margin-right: 20px;
+    margin-bottom: 3px;
+    list-style: none;
+  }
+  
+  .user-message {
+    text-align: right;
+    padding-right: 10px;
+  }
+  
+  .alert {
+    text-align: center;
+    font-size: 10px;
+    background-color: #696969;
+    color: #fff;
+  }
+  
+  .send-message ,.send-message-dark{
+    padding: 22px 12px;
+    display: flex;
+  }
+  
+  .send-message input ,.send-message-dark input{
+    flex-grow: 1;
+    background-color: transparent;
+    border: none;
+  }
+  .send-message-dark input{
+    color: #fff;
+  }
