--- a/views/Plogin.ejs
+++ b/views/Plogin.ejs
@@ -62,7 +62,7 @@
                         <i class="fas fa-eye" onclick="show()"></i>
                     </div>
                     <div class="div">
-                        <input type="password" name="password" class="input" placeholder="Password">
+                        <input id="pswrd" type="password" name="password" class="input" placeholder="Password">
                     </div>
                 </div>
 
@@ -80,7 +80,7 @@
 
 <!--include footer-->
 <%- include('include/_footer') %>
-<script src="../Assets/js/login.js"></script>
+<script src="/js/login.js"></script>
 </body>
 
 </html>
