--- a/views/doctors/startCall.ejs
+++ b/views/doctors/startCall.ejs
@@ -1,25 +1,74 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" href="/css/call.css">
-    </head>
-    <body>
-        <div>
-            <input placeholder="Enter code..."
-                    type="text"
-                    id="username-input" /><br>
-            <button onclick="sendUsername()">Send</button>
-            <button onclick="startCall()">Start Call</button>
-        </div>
-        <div id="video-call-div">
-            <video muted id="local-video" autoplay></video>
-            <video id="remote-video" autoplay></video>
-            <div class="call-action-div">
-                <button onclick="muteVideo()">Mute Video</button>
-                <button onclick="muteAudio()">Mute Audio</button>
-            </div>
-        </div>
-        <script src="/js/sender.js"></script>
-    </body>
+<!doctype html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/login.css">
+    <!--font awesome cdn link  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <title><%=title%>MediCare</title>
+</head>
+
+<body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+        crossorigin="anonymous">
+      </script>
+
+<!--include navbar-->
+<%- include('../include/docDashboardNavbar') %>
+
+<div class="container" style="margin-top: 40px; margin-left: 300px;">
+
+  <div class="row mt-1">
+    <div class="col-md-13 m-auto">
+      <div class="card card-body">
+        <h1 class="text-center mb-3">Start Video Consultation</h1>
+        <%- include ("../partials/messages"); %>
+        <form action="/D_dashboard/startCall/<%= s_id%>/<%= meetId %>" method="POST">
+            <div class="form-group">
+                <label>Name</label>
+                <input type="text" class="form-control" name="name" value="<%= name%> <%=lastname%>" required/>
+              </div>
+              <div class="form-group">
+                <label>Meet ID</label>
+                <div class="card">
+                  <div class="form-control">
+                    <%= meetId %>
+                  </div>
+                </div>   
+              </div>
+              <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" name="video" checked>
+                <label class="form-check-label" for="flexSwitchCheckDefault">Video</label>
+              </div>
+              <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" name="audio" checked>
+                <label class="form-check-label" for="flexSwitchCheckChecked">Audio</label>
+              </div>
+              <br>
+              <button type="submit" class="form-button btn btn-inv">Start</button>
+        </form>
+      </div>
+    </div>
+  </div>
+    
+</div>
+
+
+
+<!--include footer-->
+<%- include('../include/_footer') %>
+
+</body>
 
 </html>
+
+
+<!---->
