--- a/views/patients/p_viewAppointments.ejs
+++ b/views/patients/p_viewAppointments.ejs
@@ -50,7 +50,7 @@
                         text-align:center;padding:.5em;background-color:#0073e2;color:#fff;border-radius:4px;
                         box-shadow:0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08);text-decoration:none">
                         Cancel</a></td>
-                        <td><a href="/P_dashboard/joinCall/<%= result._id %>" target="_blank" style="width:100%;display:block;
+                        <td><a href="/P_dashboard/joinCall" style="width:100%;display:block;
                             text-align:center;padding:.5em;background-color:#0073e2;color:#fff;border-radius:4px;
                             box-shadow:0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08);text-decoration:none">
                             Join Call</a> </td>
